--- a/package.json
+++ b/package.json
@@ -8,15 +8,21 @@
         "start": "next start"
     },
     "dependencies": {
+        "@emotion/react": "^11.4.1",
+        "@emotion/styled": "^11.3.0",
         "@hookform/resolvers": "^2.6.1",
+        "@mui/icons-material": "^5.0.1",
+        "@mui/material": "^5.0.1",
         "express-jwt": "^6.0.0",
         "jsonwebtoken": "^8.5.1",
+        "messagebird": "^3.6.4",
+        "mongoose": "^6.0.7",
         "next": "^11.0.1",
         "prop-types": "^15.7.2",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-hook-form": "^7.12.1",
-        "rxjs": "^7.3.0",
-        "yup": "^0.32.9"
+        "react-phone-input-2": "^2.14.0",
+        "rxjs": "^7.3.0"
     }
 }
